# kicad-footprint-generator

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.md  README.md  auditor.py  build.sh  generator.py  manage.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  validator.py
3d-gen/: .gdb_history  .gitignore  .gitlab-ci.yml  README.md  auditor.py  validator.py
3d-model-generators/: .gitlab-ci.yml  README.md  generator.py  requirements.txt  validator.py
4UCON_17809/: main_generator.py
Altech/: cq_parameters.py  cq_parameters.yaml  main_generator.py
BGA_packages/: cq_parameters.yaml  main_generator.py
Battery/: battery_caseBX0036.py  battery_casebutton.py  battery_casecylinder.py  battery_common.py  battery_contact.py  battery_pins.py  cq_Seiko_MSXXXX.py  cq_parameters.yaml  main_generator.py
Box_Headers/: main_generator.py
Button_Switch_Nidec/: cq_base_model.py  cq_base_parameters.py  cq_model_generator.py  cq_nidec_SH70xx_models.py  cq_parameters.py  cq_parameters.yaml  main_generator.py
Button_Switch_Tactile_SMD_THT/: cq_base_model.py  cq_base_tact_switches.py  cq_cuk_pts810x.py  cq_parameters.py  cq_parameters.yaml  cq_ultra_small_tact_switch.py  main_generator.py
Buzzer_Beeper/: cq_parameters.yaml  cq_parameters_CUI_CST_931RP_A.py  cq_parameters_Kobitone_254-EMB84Q-ROdsfs.py  cq_parameters_PUI_AI_1440_TWT_24V_2_R.py  cq_parameters_StarMicronics_HMB_06_HMB_12.py  cq_parameters_TDK_PS1240P02BT.py  cq_parameters_kingstate_KCG0601.py  cq_parameters_smd_generic_rectangular.py  cq_parameters_tht_generic_round.py  main_generator.py
CP_Radial_SMD/: cp_radial_smd.py  cq_parameters.yaml  main_generator.py
CP_Radial_THT/: cp_radial_tht.py  cq_parameters.yaml  main_generator.py
CP_Tantalum_SMD/: cp_tantalum_smd.py  main_generator.py
CP_Tantalum_THT/: cp_tantalum_tht.py  main_generator.py
C_Chip_SMD/: c_chip_smd.py  cq_parameters.yaml  main_generator.py
C_Trimmer/: cq_common.py  cq_murata.py  cq_sprague_goodman.py  cq_voltronics.py  main_generator.py
Capacitor_THT/: cq_parameters.yaml  main_generator.py
Conn_PinSocket/: cq_parameters.yaml  cq_socket_strips.py  main_generator.py  parameters.py
Conn_Stocko/: cq_parameters.yaml  main_generator.py
Connector_Audio/: cq_audio_jack.py  cq_audio_jack_cui.py  cq_audio_jack_neutrik.py  cq_audio_jack_qingpu.py  cq_parameters.yaml  main_generator.py
Connector_Coaxial/: cq_coaxial_molex.py  cq_coaxial_samtec.py  cq_coaxial_te.py  cq_common.py  cq_parameters.yaml  main_generator.py
Connector_Dsub/: cq_common.py  cq_dsub.py  cq_parameters.yaml  main_generator.py
Connector_FFC-FPC/: main_generator.py
Connector_Phoenix_SPT/: cq_parameters.yaml  main_generator.py  phoenixcontact_terminal_block_spt_tht.py  phoenixcontact_terminal_block_spt_tht.yaml
Connector_PinHeader/: cq_parameters.yaml  main_generator.py  pinheader.py
Connector_PinSocket/: cq_base_model.py  cq_base_parameters.py  cq_model_generator.py  cq_parameters.yaml  cq_socket_strips.py  main_generator.py
Connector_Stocko/: main_generator.py
Connector_USB/: cq_parameters.yaml  main_generator.py  usb_connector.py
Connector_Wago_734/: cq_connect_wago_734.py  cq_parameters.yaml  main_generator.py
Connector_Wuerth_WR-PHD/: cq_parameters.yaml  main_generator.py  wuerth_wr_phd_bottom_entry.py  wuerth_wr_phd_bottom_entry.yaml
Converter_ACDC/: connector_acdc.py  converter_acdc.py  cq_parameters.yaml  main_generator.py
Converter_DCDC/: converter_dcdc.py  cq_parameters.yaml  main_generator.py
Crystal/: cq_base_model.py  cq_parameters.py  cq_parameters.yaml  cq_parameters_Resonator_AT310.py  cq_parameters_Resonator_C26_LF.py  cq_parameters_Resonator_C38_LF.py  cq_parameters_Resonator_SMD_muRata_CSTx.py  cq_parameters_Resonator_peterman_smd.py  cq_parameters_Resonator_smd_type_2.py  main_generator.py
DIP_packages/: cq_parameters.yaml  dip_packages.py  main_generator.py
DIP_parts/: cq_base_model.py  cq_model_generator.py  cq_model_piano_switch.py  cq_model_pin_switch.py  cq_model_smd_switch_copal.py  cq_model_smd_switch_kingtek.py  cq_model_smd_switch_omron.py  cq_model_socket_turned_pin.py  main_generator.py  main_generator_cq_1.py
Directfet_SMD/: cq_parameters.yaml  main_generator.py
Example/: cq_parameters.yaml  main_generator.py
Filter/: cq_common.py  cq_kyocera.py  cq_minicircuit.py  cq_murata.py  main_generator.py
Flat_Pin_packages/: cq_parameters.yaml  cq_parameters_diode.py  cq_parameters_sot.py  flat_pin_packages.py  main_generator.py
Fuse/: cq_belfuse.py  cq_bulgin.py  cq_common.py  cq_keystone.py  cq_littlefuse.py  cq_schurter.py  main_generator.py
GW_QFP_SOIC_SSOP_TSSOP_SOT/: cq_parameters.yaml  cq_parameters_soic.py  gw_qfp_soic_ssop_tssop_sot.py  main_generator.py
Inductors_SMD/: Pulse.yaml  apv.yaml  bourns.yaml  changjiang.yaml  changjiang_fnr.csv  chilisin.yaml  ck.yaml  coilcraft.yaml  cq_parameters.yaml  inductors_smd.py  koherelec_mda.csv  main_generator.py  smd_inductor_properties.py  sunlord.yaml  sunlord_swpa.csv
KicadModTree/: FileHandler.py  KiCadVars.py  KicadFileHandler.py  ModArgparser.py  PolygonPoints.py  Size.py  Vector.py  __init__.py  serializer.py
LED_SMD/: cq_parameters.yaml  led_smd.py  main_generator.py  main_generator_cq_1.py
L_Chip_SMD/: l_chip_smd.py  main_generator.py
Molex_5569/: cq_parameters.yaml  main_generator.py  molex_5569.py
Package_SIP/: cq_SIP_3.py  main_generator.py
Potentiometer_THT/: cq_parameters.yaml  main_generator.py
QFN_packages/: cq_parameters.py  cq_parameters.yaml  cq_parameters_diode.py  main_generator.py  qfn_packages.py
RF_Antenna_Chip_SMD/: cq_parameters.yaml  main_generator.py  rf_antenna_chip_smd.py
Relay_SMD/: cq_model_relay_smd.py  main_generator.py
Relay_THT/: cq_parameters.yaml  main_generator.py  relay_tht.py
Resistor_SMD/: main_generator.py
Resistor_THT/: main_generator.py  resistor_tht.py
Standoff_FF_MF/: cq_parameters.yaml  main_generator.py  standoff_ff_mf.py
Switch_SMD/: cq_parameters.yaml  main_generator.py  main_generator_dip.py
TO_SOT_Packages_SMD_custom/: DPAK_export.py  ribbon.py  (+3 more)
(+1189 files in other folders)
