[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-footprint-generator"
version = "1.1.2"
description = "Creating kicad footprints using Python scripts"
readme = "README.md"

# Who created the project
authors = [
    {name = "Thomas Pointhuber", email = "thomas.pointhuber@gmx.at"},
    {name = "KiCad Library Team" },
]

# Project dependencies
dependencies = [
    "asteval",
    "typing_extensions",
    "pyyaml",
    "future",
]

# Optional: development dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pycodestyle",
    "black",
    "isort",
    "flake8",
    "unittest2",
    "nose2",
    "nose2-cov"
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

3d = [
    "cadquery==2.3.1",
    "cadquery-ocp>=7.7.0a0,<7.8",
    "nptyping==2.0.1",
    "nlopt==2.7.1",
    "numpy==1.23.5",
]

# Package discovery configuration
[tool.setuptools.packages.find]
where = ["src", "."]
include = [
    "kilibs*",
    "KicadModTree*",
    "scripts.general*",
    "scripts.tools*",
    "scripts.Packages.utils",
]

[tool.setuptools.package-data]
"scripts.tools" = [
    "global_config_files/*.yaml",
]

[tool.isort]
profile = "black"
# COMMON is a made-up name listing a bunch of regularly used imports
sections = ['FUTURE', 'STDLIB', 'COMMON', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_common = ['cadquery', 'yaml', 'OCP']
